集成redis数据库，集成logback日志管理

--- a/attacking-panda-java/panda-admin/pom.xml
+++ b/attacking-panda-java/panda-admin/pom.xml
@@ -16,10 +16,12 @@
         <java.version>1.8</java.version>
     </properties>
     <dependencies>
+        <!-- 基础信息项目 -->
         <dependency>
             <groupId>com.panda</groupId>
             <artifactId>panda-common</artifactId>
         </dependency>
+        <!-- 框架核心项目 -->
         <dependency>
             <groupId>com.panda</groupId>
             <artifactId>panda-framework</artifactId>
