--- a/attacking-panda-java/panda-admin/src/main/resources/application.properties
+++ b/attacking-panda-java/panda-admin/src/main/resources/application.properties
@@ -1,6 +1,5 @@
 server.port=8989
-
-# ?????
+# datasource
 spring.datasource.druid.url=jdbc:mysql://127.0.0.1:3306/attacking-panda-db?useUnicode=true&characterEncoding=utf-8&useSSL=false
 spring.datasource.druid.username=root
 spring.datasource.druid.password=guoshunfa
@@ -14,11 +13,23 @@ spring.datasource.druid.test-on-borrow=false
 spring.datasource.druid.test-on-return=false
 spring.datasource.druid.test-while-idle=true
 spring.datasource.druid.time-between-eviction-runs-millis=60000
-
-#
+# redis
+spring.redis.database=0
+spring.redis.host=127.0.0.1
+spring.redis.port=6379
+spring.redis.password=
+spring.redis.jedis.pool.min-idle=0
+spring.redis.jedis.pool.max-active=8
+spring.redis.jedis.pool.max-idle=8
+spring.redis.jedis.pool.max-wait=-1ms
+spring.redis.connect-timeout=30000ms
+# spring mvc
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
-
-# json??????Date????
+# json date-format
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
-# ??
+# time-zone
 spring.jackson.time-zone=GMT+8
+# logback
+logging.config=classpath:config/logback.xml
+logging.level.dao=debug
+log.path=/Users/guoshunfa/workspace/my/my-main-git-project/attacking-panda/attacking-panda-java/log
