引入mybatis plus代码生成

--- a/attacking-panda-java/panda-admin/src/main/resources/application.properties
+++ b/attacking-panda-java/panda-admin/src/main/resources/application.properties
@@ -33,3 +33,6 @@ spring.jackson.time-zone=GMT+8
 logging.config=classpath:config/logback.xml
 logging.level.dao=debug
 log.path=/Users/guoshunfa/workspace/my/my-main-git-project/attacking-panda/attacking-panda-java/log
+# mybatis
+mybatis.mapper-locations=classpath:mapper/*.xml
+mybatis-plus.mapper-locations=classpath*:/mapper/*.xml
