--- a/attacking-panda-java/panda-framework/pom.xml
+++ b/attacking-panda-java/panda-framework/pom.xml
@@ -18,30 +18,15 @@
     <url>https://pandacode.cn</url>
 
     <dependencies>
-        <!-- springboot -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
         <!-- mybatis -->
         <dependency>
             <groupId>org.mybatis</groupId>
             <artifactId>mybatis</artifactId>
         </dependency>
-        <!-- mybatis plus -->
+        <!-- mybatis plus generator -->
         <dependency>
             <groupId>com.baomidou</groupId>
-            <artifactId>mybatis-plus-boot-starter</artifactId>
-        </dependency>
-        <!-- swagger -->
-        <dependency>
-            <groupId>io.springfox</groupId>
-            <artifactId>springfox-boot-starter</artifactId>
-            <version>3.0.0</version>
-        </dependency>
-        <dependency>
-            <groupId>com.github.xiaoymin</groupId>
-            <artifactId>swagger-bootstrap-ui</artifactId>
+            <artifactId>mybatis-plus-generator</artifactId>
         </dependency>
         <!-- jdbc -->
         <dependency>
@@ -71,7 +56,10 @@
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-pool2</artifactId>
-            <version>2.9.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.panda</groupId>
+            <artifactId>panda-common</artifactId>
         </dependency>
     </dependencies>
 
