--- a/attacking-panda-java/panda-admin/src/main/resources/application.properties
+++ b/attacking-panda-java/panda-admin/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8989
-# datasource
+# -------------------------------datasource-------------------------------
 spring.datasource.druid.url=jdbc:mysql://127.0.0.1:3306/attacking-panda-db?useUnicode=true&characterEncoding=utf-8&useSSL=false
 spring.datasource.druid.username=root
 spring.datasource.druid.password=guoshunfa
@@ -13,7 +13,7 @@ spring.datasource.druid.test-on-borrow=false
 spring.datasource.druid.test-on-return=false
 spring.datasource.druid.test-while-idle=true
 spring.datasource.druid.time-between-eviction-runs-millis=60000
-# redis
+# -------------------------------redis-------------------------------
 spring.redis.database=0
 spring.redis.host=127.0.0.1
 spring.redis.port=6379
@@ -23,16 +23,23 @@ spring.redis.jedis.pool.max-active=8
 spring.redis.jedis.pool.max-idle=8
 spring.redis.jedis.pool.max-wait=-1ms
 spring.redis.connect-timeout=30000ms
-# spring mvc
+# -------------------------------spring mvc-------------------------------
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
-# json date-format
+# -------------------------------json date-format-------------------------------
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
-# time-zone
+# -------------------------------time-zone-------------------------------
 spring.jackson.time-zone=GMT+8
-# logback
+# -------------------------------logback-------------------------------
 logging.config=classpath:config/logback.xml
 logging.level.dao=debug
 log.path=/Users/guoshunfa/workspace/my/my-main-git-project/attacking-panda/attacking-panda-java/log
-# mybatis
+# -------------------------------mybatis-------------------------------
 mybatis.mapper-locations=classpath:mapper/*.xml
+# -------------------------------mybatis plus-------------------------------
 mybatis-plus.mapper-locations=classpath*:/mapper/*.xml
+# ????????????(since 3.3.0,????????????2)
+mybatis-plus.global-config.db-config.logic-delete-field=deleteFlag
+# ??????(??? 1)
+mybatis-plus.global-config.db-config.logic-delete-value=1
+# ??????(??? 0)
+mybatis-plus.global-config.db-config.logic-not-delete-value=0
