--- a/attacking-panda-java/panda-admin/src/main/resources/application.properties
+++ b/attacking-panda-java/panda-admin/src/main/resources/application.properties
@@ -23,6 +23,8 @@ spring.redis.jedis.pool.max-active=8
 spring.redis.jedis.pool.max-idle=8
 spring.redis.jedis.pool.max-wait=-1ms
 spring.redis.connect-timeout=30000ms
+# -------------------------------token-------------------------------
+token.overdue.time=1800
 # -------------------------------spring mvc-------------------------------
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 # -------------------------------json date-format-------------------------------
