--- a/attacking-panda-java/panda-common/pom.xml
+++ b/attacking-panda-java/panda-common/pom.xml
@@ -16,5 +16,11 @@
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-all</artifactId>
         </dependency>
+        <!-- fastjson -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.33</version>
+        </dependency>
     </dependencies>
 </project>
