--- a/attacking-panda-java/panda-admin/pom.xml
+++ b/attacking-panda-java/panda-admin/pom.xml
@@ -11,6 +11,7 @@
     <artifactId>panda-admin</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>panda-admin</name>
+    <packaging>jar</packaging>
     <description>panda-admin</description>
     <properties>
         <java.version>1.8</java.version>
@@ -31,6 +32,11 @@
             <groupId>com.panda</groupId>
             <artifactId>panda-system</artifactId>
         </dependency>
-    </dependencies>
 
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.4.4</version>
+        </dependency>
+    </dependencies>
 </project>
