--- a/attacking-panda-java/panda-common/pom.xml
+++ b/attacking-panda-java/panda-common/pom.xml
@@ -8,6 +8,7 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>panda-common</artifactId>
     <name>panda-common</name>
+    <packaging>jar</packaging>
     <description>基础工具类项目</description>
     <url>https://pandacode.cn</url>
     <dependencies>
