--- a/attacking-panda-java/panda-system/pom.xml
+++ b/attacking-panda-java/panda-system/pom.xml
@@ -12,10 +12,12 @@
     <version>1.0-SNAPSHOT</version>
     <name>panda-system</name>
     <description>panda-system</description>
+    <packaging>jar</packaging>
     <properties>
         <java.version>1.8</java.version>
     </properties>
     <dependencies>
+        <!-- 基础项目 -->
         <dependency>
             <groupId>com.panda</groupId>
             <artifactId>panda-common</artifactId>
