--- a/attacking-panda-java/pom.xml
+++ b/attacking-panda-java/pom.xml
@@ -26,7 +26,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.7.4</version>
+        <version>2.6.2</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
@@ -46,17 +46,12 @@
         <panda-system.version>1.0-SNAPSHOT</panda-system.version>
         <mysql-connector-java.version>5.1.47</mysql-connector-java.version>
         <druid-spring-boot-starter.version>1.2.11</druid-spring-boot-starter.version>
+        <jwt.version>0.7.0</jwt.version>
     </properties>
 
     <!-- 统一版本控制 -->
     <dependencyManagement>
         <dependencies>
-            <!-- 测试 -->
-            <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-starter-test</artifactId>
-                <scope>test</scope>
-            </dependency>
             <!-- mysql(数据库) -->
             <dependency>
                 <groupId>mysql</groupId>
@@ -119,6 +114,12 @@
                 <artifactId>druid-spring-boot-starter</artifactId>
                 <version>${druid-spring-boot-starter.version}</version>
             </dependency>
+            <!-- jwt -->
+            <dependency>
+                <groupId>io.jsonwebtoken</groupId>
+                <artifactId>jjwt</artifactId>
+                <version>${jwt.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
@@ -160,8 +161,21 @@
         <plugins>
             <!-- maven插件 -->
             <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <version>3.0.2</version>
+                <executions>
+                    <execution>
+                        <id>copy-dependencies</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>copy-dependencies</goal>
+                        </goals>
+                        <configuration>
+                            <!-- configure the plugin here -->
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
