修复登陆校验问题

--- a/attacking-panda-java/panda-admin/src/main/resources/application.properties
+++ b/attacking-panda-java/panda-admin/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 # -------------------------------time-zone-------------------------------
 spring.jackson.time-zone=GMT+8
 # -------------------------------logback-------------------------------
-logging.config=classpath:logback.xml
+logging.config=classpath:config/logback.xml
 logging.level.dao=debug
 log.path=/Users/guoshunfa/workspace/my/my-main-git-project/attacking-panda/attacking-panda-java/log
 # -------------------------------mybatis-------------------------------
